--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,7 @@ body {
   font-family: "Neue Plak", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 
   h1,
   h2,
@@ -14,699 +14,4 @@ body {
   h6 {
     font-family: "copacanaba", sans-serif;
   }
-
-  h1 {
-    font-size: 96px;
-    font-weight: 700;
-
-    @media screen and (max-width: 768px) {
-      font-size: 28px;
-    }
-  }
-
-  p {
-    font-size: 18px;
-    em {
-      color: #54d077;
-      font-weight: 800;
-    }
-
-    @media screen and (max-width: 768px) {
-      font-size: 24px;
-    }
-  }
-
-  a {
-    color: #000000;
-    text-decoration: none;
-    position: relative;
-    &:not(.btn):hover {
-      text-decoration: none;
-      color: #337F9D;
-      // &:after{
-      //   content: "";
-      //   position: absolute;
-      //   bottom: 0;
-      //   left: 0;
-      //   height: 5px;
-      //   // width: 20px;
-      //   background-color: #00750a;
-      //   z-index: -1;
-      //   animation: slide 0.5s ease forwards ;
-      // }
-    }
-  }
-
-  @keyframes slide{
-    0%{
-      width: 10px;
-    }
-    100%{
-      width: 50px;
-    }
-  }
-  
-  main section:not(section.background),header,footer > div{
-    max-width: 1300px;
-    margin: 0 auto;
-  }
-  header{
-    @media screen and (max-width: 768px) {
-      margin: 0;
-    }
-  }
-  .btn{
-    background-color: #093A3A;
-    padding: 10px 20px;
-    border-radius: 10px;
-    color: #fff;
-    font-weight: 800;
-    &:hover{
-      background-color: #0e5656;
-    }
-  }
-}
-
-
-
-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 170px;
-  position: absolute;
-  top: 0px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  position : fixed;
-  z-index: 3;
-  transition: all 0.5s ease-in-out;
-  div.logo{
-    img{
-      width: 100px;
-      height: 100px;
-      transition: all 0.5s ease-in-out;
-    }
-  }
-  ul{
-    display:flex;
-    align-items:center;
-    gap: 50px;
-    li{
-      a{
-        color: #fff;
-        font-weight: 800;
-        text-transform: uppercase;
-      }
-    }
-  }
-  .burger{
-    display: none;
-  }
-  .close-navbar{
-    display: none;
-  }
-  &.sticky{
-    height: 100px;
-    transition: all 0.5s ease-in-out;
-    background-color: #093A3A;
-    padding: 0px 30px;
-    border-radius: 0px 0px 30px 30px;
-    div.logo{
-      img{
-        width: 60px;
-        height: 60px;
-        transition: all 0.5s ease-in-out;
-      }
-    }
-    .btn{
-      background-color: #106666;
-      transition: all 0.5s ease-in-out;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    left: 0;
-    transform: translateX(0);
-    width: 100vw;
-    padding: 0px 30px;
-    .burger{
-      display: block;
-    }
-    .navbar{
-      display: none;
-      flex-direction: column;
-      align-items: flex-end;
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      background-color: #093A3A;
-      padding: 20px 20px 20px 40px;
-      border-radius: 20px 0px 0px 20px;
-      .btn{
-        display: block;
-        background-color: #0e5656;
-      }
-    }
-  }
-}
-
-main{
-  section.background{
-    height: 1210px;
-    background-image:  linear-gradient(to bottom, #041b1b2a, #041b1b2f), url(/images/headerBackground.png);
-    background-size: cover;
-    background-position: center;
-   
-    article{
-      height: 100vh;
-      width: 1300px;
-      margin: 0 auto;
-      position: relative;
-      div.enquete{
-        position: absolute;
-        top: 60%;
-        left: 0%;
-        background-color: rgba(0, 0, 0, 0.248);
-        backdrop-filter: blur(1px);
-        width: 250px;
-        padding: 20px;
-        border-radius: 10px;
-        text-align: center;
-        button{
-          margin-top: 20px;
-        }
-        p{
-          line-height: 25px;
-          color: #fff;
-          text-align: left;
-          font-weight: 800;
-        }
-        @media screen and (max-width: 768px) {
-          top: 50%;
-          left: 50%;
-          transform: translateX(-50%);
-        }
-        
-      }
-      .title-header{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        width: 1210px;
-        h1,h2{
-          font-weight: 700;
-          font-size: 96px;
-          color: #fff;
-          text-transform: uppercase;
-          position: relative;
-          width: max-content;
-          @media screen and (max-width: 768px) {
-            font-size: 28px;
-          }
-        }
-        h1:after, h2:after{
-          content: "escs'";
-          border-bottom: 10px solid rgb(255, 255, 255);
-          position: absolute;
-          right: 0;
-          color: transparent;
-        }
-        h2{
-          margin-top: 100px;
-        }
-        > div:last-child{
-          display: flex;
-          align-items: center;
-          justify-content: flex-end;
-        }
-        @media screen and (max-width: 768px) {
-          width: auto;
-          top: 35%;
-          h2{
-            margin-top: 50px;
-          }
-          h1:after, h2:after{
-            border-bottom: 5px solid rgb(255, 255, 255);
-          }
-        }
-
-      }
-      .privacy-policy{
-        h2{
-          font-size: 70px;
-        }
-    }
-    }
-    
-    @media screen and (max-width: 768px) {
-      
-      height: 900px;
-      article{
-        width: auto;
-      }
-    }
-  }
-}
-
-footer{
-  background-color:#093A3A;
-  height: 400px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  > div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 60px;
-    p{
-      font-size: 14px;
-      text-align: center;
-      color: #fff;
-
-    }
-    > div{
-      p:last-child{
-        margin-top: 10px;
-      }
-    }
-  }
-  ul:first-child{
-    li{
-      a{
-        font-size: 20px;
-        font-weight: 800;
-        text-transform: uppercase;
-        @media screen and (max-width: 768px) {
-          font-size: 16px;
-        }
-      }
-    }
-  }
-  ul{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    gap: 100px;
-    margin: 0;
-    padding: 0;
-    li{
-      a{
-        color: #fff;
-      }
-    }
-  }
-  @media screen and (max-width: 768px) {
-    height:500px;
-    ul{
-      flex-direction: column;
-      gap: 20px;
-    }
-    p{
-      font-size: 12px;
-    }
-    >div{
-      p{
-        font-size: 8px;
-      }
-    }
-  }
-  
-}
-
-.mouse {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-  &-shape{
-    position: relative;
-    display: block;
-    width: 25px;
-    height: 40px;
-    margin: 0 auto;
-    margin-top:30px;
-    border: 2px solid white;
-    border-radius: 22px;
-    .mouse-animation {
-      position: absolute;
-      display: block;
-      top: 25%;
-      left: 50%;
-      width: 5px;
-      height: 5px;
-      background: white;
-      border-radius: 50%;
-      transform: translate(-50%, -25%);
-      animation: ball-scroll 2s linear infinite;
-    }
-  }
-}
-
-@keyframes ball-scroll {
-  0% {
-    opacity: 1;
-    top: 25%;
-  }
-  20% {
-    opacity: 1;
-    top: 50%;
-  }
-  50% {
-    opacity: 0;
-    top: 75%;
-  }
-  100% {
-    opacity: 0;
-    top: 25%;
-  }
-}
-
-
-#result_news {
-  margin-top: 20px;
-  font-size: 20px;
-  color: rgb(135, 40, 40);
-}
-
-form {
-  margin: 20px 0px 30px 0px;
-
-  input {
-    border-radius: 10px;
-    border: 1px solid #000;
-    padding: 10px;
-  }
-
-  button {
-    border-radius: 10px;
-    border: 1px solid #000;
-    padding: 10px;
-    background-color: #000;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    margin-left: 5px;
-  }
-  .mc-field-group{
-    text-align: center;
-    button{
-      margin-top: 20px;
-    }
-  }
-}
-
-.modal-form {
-  overflow: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  position: absolute;
-  z-index: 5;
-  top: 0;
-  background-color: rgba($color: #000000, $alpha: 0.8);
-  width: 100vw;
-  height: 100vh;
-  display: none;
-  justify-content: center;
-  overflow: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  .cross-form {
-    position: absolute;
-    top: 0;
-    right: 23vw;
-    padding: 1rem;
-    cursor: pointer;
-  }
-}
-
-// pages privacy-policy and terms-of-use
-  
-.mention-legal, .conf{
-  h2{
-
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-  }
-  h3{
-  font-size: 1.2rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  }
-  h4{
-  font-size: 1.2rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  }
-  p{
-  font-size: 1rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-  line-height: 20px;
-  }
-
-  h3 {
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-  }
-
-  h4 {
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 1rem;
-    line-height: 20px;
-  }
-
-  p:last-child {
-    margin-bottom: 2rem;
-  }
-
-  ul {
-    ul {
-      list-style-type: disc;
-    }
-
-    display: block;
-  }
-}
-
-.mention-legal {
-  width: 100%;
-
-}
-
-main {
-  section:not(section.background) {
-    width: 1300px;
-    margin: 0 auto;
-
-    @media screen and (max-width: 768px) {
-      width: 100%;
-    }
-
-    .main-conteneur {
-      margin-top: 110px;
-      position: relative;
-      height: 350px;
-      @media screen and (max-width: 768px) {
-        width: 100%;
-        margin-top: 80;
-        height: auto;
-       }
-
-      >div {
-        display: flex;
-        flex-direction: row;
-        height: 100%;
-
-        @media screen and (max-width:768px) {
-          flex-direction: column;
-          height: auto;
-        }
-      }
-
-      h6 {
-        position: absolute;
-        font-size: 50px;
-        letter-spacing: 20px;
-
-        @media screen and (max-width: 768px) {
-          position: relative;
-          font-size: 25px;
-          margin-bottom: 10px;
-          margin-top: 10px;
-          padding-left: 10px;
-          letter-spacing: 10px;
-        }
-      }
-
-      .green {
-        color: #B0B864;
-      }
-
-      .left {
-        right: 25px;
-        z-index: 2;
-        top: 10px;
-
-        @media screen and (max-width: 768px) {
-          right: auto;
-          z-index: 0;
-          top: 0;
-        }
-      }
-
-      .right {
-        left: 50px;
-        z-index: 2;
-        top: 10px;
-
-        @media screen and (max-width: 768px) {
-          left: auto;
-          z-index: 0;
-          top: 0;
-        }
-      }
-
-      .blue {
-        color: #337F9D;
-      }
-
-      .beige {
-        color: #D8B9AC;
-      }
-
-      .conteneur-img {
-        width: 50%;
-        position: relative;
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-        @media screen and (max-width: 768px) {
-          height: 250px;
-          width: 100%;
-          border-radius: 0;
-        }
-      }
-
-      .img1 {
-        background-image: url(/images/Rectangle57.png);
-      }
-
-      .img2 {
-        background-image: url(/images/Rectangle58.png);
-      }
-
-      .img3 {
-        background-image: url(/images/Rectangle59.png);
-      }
-
-      .text {
-        width: 50%;
-        padding-top: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: "Neue Plak";
-
-        @media screen and (max-width: 768px) {
-          width: 100%;
-          padding: 30px 0px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-
-        }
-
-        p{
-          line-height: 27px;
-          span{
-            border: none;
-          }
-        }
-       
-
-        >div {
-          width: 70%;
-          margin-top: 60px;
-
-          p:last-child {
-            margin-top: 20px;
-            margin-bottom: 10px;
-          }
-          p{
-            @media screen and (max-width:728px) {
-              font-size: 16px;
-            }
-          }
-          @media screen and (max-width:728px) {
-            width: 90%;
-          }
-
-        }
-      }
-  }
-
-
-  .main-conteneur:last-child{
-    margin-bottom: 100px;
-  }
-
-  .main-conteneur:nth-child(2){
-    > div{
-      flex-direction: row-reverse;
-      @media screen and (max-width:728px) {
-        flex-direction:  column;
-      }
-    }
-    
-  }
-
-  }
-  span{
-    border-bottom: 10px solid;
-    @media screen and (max-width:768px) {
-      border-bottom: none;
-    }
-  }
-}
-
-// axeptio
-.Icon__IconStyle-sc-1jpid70-1 > svg:nth-child(1) > path:nth-child(2){
-  fill: #fff !important;
-}
-
-.Icon__IconStyle-sc-1jpid70-1 > svg:nth-child(1) > path:nth-child(1){
-  fill: #093A3A !important;
-}
-
-//test encadrée
-
-#display-image{
-  width: 400px;
-  height: 225px;
-  border: 1px solid black;
-  background-position: center;
-  background-size: cover;
-}
-
-article[class*="article_"] img {
-  width:100px;
 }
